# resume-screening-app

./: DEPLOYMENT.md  README.md  package-lock.json  package.json  server.js
backend/: README.md  pyproject.toml  requirements.txt  run.py  run_tests.py  test_cache_system.py
backend/app/: __init__.py  deepseek_analyzer.py  main.py  pdf_extractor.py  qwen_analyzer.py
backend/app/response_cache/: resume_responses.json
backend/tests/: test_main.py  test_pdf_extractor.py
public/: index.html  script.js  styles.css
